# rust-learn-script

./: Cargo.toml
src/: main.rs
src/utils/: EmailUtil.rs  mod.rs
