[package]
name = "taos_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [
    "full"
] }
taos = { version = "*", default-features = false, features = ["ws"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1.7"
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "postgres"] }
tokio-postgres = "0.7"